<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/profile_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/icon_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Username: TestUser"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center|top"
        app:layout_constraintTop_toBottomOf="@id/profile_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_logout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watched_videos_title"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/map_videos"
            style="@style/Widget.Material3.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorPrimaryVariant"
            android:text="@string/videos_on_map"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav_videos_lable"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/fav_video_item"/>

        <TextView
            android:id="@+id/no_fav_videos_lb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_fav_videos"
            android:textSize="12sp"
            android:textColor="?colorPrimary"
            android:visibility="gone"
            android:layout_marginTop="100dp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_marginTop="20dp"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/logout_lable"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>