<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.feed.FeedFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/feed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_feed"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="end"
        android:layout_margin="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/map_videos"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:icon="@drawable/baseline_map_24"
            app:iconTint="?attr/colorPrimary"
            app:strokeColor="?attr/colorPrimary"
            android:text="@string/map"
            app:iconSize="26dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            app:icon="@drawable/baseline_person_24"
            app:iconTint="?attr/colorPrimary"
            app:strokeColor="?attr/colorPrimary"
            android:text="@string/title_profile"
            android:textSize="16sp"
            app:iconSize="26dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>